Update license name

--- a/src/NUCLEO_H743ZI2_Utility_Test.ioc
+++ b/src/NUCLEO_H743ZI2_Utility_Test.ioc
@@ -189,7 +189,7 @@ ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
-ProjectManager.ThreadSafeStrategy=Cortex-M7NS\:FreeRtosStrategy4,
+ProjectManager.ThreadSafeStrategy=Cortex-M7NS\:Default,
 ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
@@ -279,4 +279,5 @@ VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 board=NUCLEO-H743ZI2
 boardIOC=true
+rtos.0.ip=FREERTOS
 isbadioc=false
